MDEV-34771 Types mismatch when cloning items causes debug assertion

Missing methods added to Item_bin_string